@@ -12,18 +12,20 @@ class RPC(object):
     instantiate: The position or the slice of the arguments to be instanciated
     result: The function to transform the result
     check_access: If access right must be checked
+    unique: Check instances are unique
     '''
 
-    __slots__ = ('readonly', 'instantiate', 'result', 'check_access')
+    __slots__ = ('readonly', 'instantiate', 'result', 'check_access', 'unique')
 
     def __init__(self, readonly=True, instantiate=None, result=None,
-            check_access=True):
+            check_access=True, unique=True):
         self.readonly = readonly
         self.instantiate = instantiate
         if result is None:
             result = lambda r: r
         self.result = result
         self.check_access = check_access
+        self.unique = unique
 
     def convert(self, obj, *args, **kwargs):
         args = list(args)
@@ -48,6 +50,8 @@ class RPC(object):
                     elif isinstance(data, dict):
                         return obj(**data)
                     else:
+                        if self.unique and len(data) != len(set(data)):
+                            raise ValueError("Duplicate ids")
                         return obj.browse(data)
             if isinstance(self.instantiate, slice):
                 for i, data in enumerate(args[self.instantiate]):
