@@ -1,3 +1,5 @@
+* Add unique ids check on RPC
+* Assert unique records on ModelView.button and Workflow.transition
 * Add test for function field methods
 * Add option install module dependencies with trytond-admin
 * Add localhost_name and timeout as get_smtp_server uri parameters
